--- a/vente/commande-create.html
+++ b/vente/commande-create.html
@@ -863,10 +863,14 @@
                 <h1 class="text-xl font-bold text-[#1A1A1A]">Nouvelle Commande Client</h1>
 
                 <div class="flex items-center gap-4">
-                    <i class="fa-solid fa-bell text-[#666666] text-lg cursor-pointer"></i>
+                    <div class="relative">
+                        <i class="fa-solid fa-bell text-[#666666] text-lg cursor-pointer"></i>
+                        <span class="notification-badge">3</span>
+                    </div>
+
                     <div class="flex items-center cursor-pointer">
                         <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-2.jpg" class="w-8 h-8 rounded-full mr-3">
-                        <span class="text-[14px] text-[#1A1A1A] mr-2">Jean DUPONT</span>
+                        <span class="text-[14px] text-[#1A1A1A] mr-2">Marie DJOMO</span>
                         <i class="fa-solid fa-chevron-down text-[#666666] text-sm"></i>
                     </div>
                 </div>
@@ -876,74 +880,151 @@
         <!-- Main Content -->
         <div class="flex-1 flex overflow-hidden">
             <!-- Sidebar -->
-            <aside class="w-60 bg-[#263c89] text-white overflow-y-auto">
+            <aside class="w-60 bg-[#263c89] text-white overflow-y-auto" id="main-sidebar">
                 <nav class="py-4">
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mb-2">
                         Module Ventes
                     </div>
 
-                    <a href="./dashboard.html" class="block px-4 py-2 text-[14px] hover:bg-[#152045] transition-colors">
-                        <i class="fa-solid fa-chart-line mr-3"></i>
-                        Dashboard
+                    <a href="./dashboard.html" class="sidebar-link" data-page="dashboard">
+                        <i class="fa-solid fa-chart-pie mr-3"></i>
+                        <span>Dashboard</span>
                     </a>
 
-                    <a href="./clients-list.html" class="block px-4 py-2 text-[14px] hover:bg-[#152045] transition-colors">
-                        <i class="fa-solid fa-users mr-3"></i>
+                    <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
                         Clients
+                    </div>
+
+                    <a href="./clients-list.html" class="sidebar-link" data-page="clients-list">
+                        <i class="fa-solid fa-users mr-3"></i>
+                        <span>Liste Clients</span>
                     </a>
 
-                    <a href="./commandes-list.html" class="block px-4 py-2 text-[14px] hover:bg-[#152045] transition-colors bg-[#152045]">
-                        <i class="fa-solid fa-file-invoice mr-3"></i>
+                    <a href="./client-create.html" class="sidebar-link" data-page="client-create">
+                        <i class="fa-solid fa-user-plus mr-3"></i>
+                        <span>Nouveau Client</span>
+                    </a>
+
+                    <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
                         Commandes
+                    </div>
+
+                    <a href="./commandes-list.html" class="sidebar-link" data-page="commandes-list">
+                        <i class="fa-solid fa-shopping-cart mr-3"></i>
+                        <span>Liste Commandes</span>
                     </a>
 
-                    <a href="./livraisons-list.html" class="block px-4 py-2 text-[14px] hover:bg-[#152045] transition-colors">
-                        <i class="fa-solid fa-truck mr-3"></i>
+                    <a href="./commande-create.html" class="sidebar-link" data-page="commande-create">
+                        <i class="fa-solid fa-file-circle-plus mr-3"></i>
+                        <span>Nouvelle Commande</span>
+                    </a>
+
+                    <a href="./commandes-validation.html" class="sidebar-link" data-page="commandes-validation">
+                        <i class="fa-solid fa-clipboard-check mr-3"></i>
+                        <span>Validation Crédit</span>
+                        <span class="ml-2 bg-[#F26F21] text-white text-xs px-2 py-0.5 rounded-full">3</span>
+                    </a>
+
+                    <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
                         Livraisons
+                    </div>
+
+                    <a href="./livraisons-list.html" class="sidebar-link" data-page="livraisons-list">
+                        <i class="fa-solid fa-truck mr-3"></i>
+                        <span>Planning Livraisons</span>
                     </a>
 
-                    <a href="./factures-list.html" class="block px-4 py-2 text-[14px] hover:bg-[#152045] transition-colors">
+                    <a href="./livraison-create.html" class="sidebar-link" data-page="livraison-create">
+                        <i class="fa-solid fa-truck-loading mr-3"></i>
+                        <span>Nouveau BL</span>
+                    </a>
+
+                    <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
+                        Facturation
+                    </div>
+
+                    <a href="./factures-list.html" class="sidebar-link" data-page="factures-list">
                         <i class="fa-solid fa-file-invoice-dollar mr-3"></i>
-                        Factures
+                        <span>Liste Factures</span>
                     </a>
 
-                    <a href="./avoirs-list.html" class="block px-4 py-2 text-[14px] hover:bg-[#152045] transition-colors">
-                        <i class="fa-solid fa-rotate-left mr-3"></i>
-                        Avoirs
+                    <a href="./facture-create.html" class="sidebar-link" data-page="facture-create">
+                        <i class="fa-solid fa-file-circle-plus mr-3"></i>
+                        <span>Nouvelle Facture</span>
                     </a>
 
-                    <a href="./caisse.html" class="block px-4 py-2 text-[14px] hover:bg-[#152045] transition-colors">
+                    <a href="./avoirs-list.html" class="sidebar-link" data-page="avoirs-list">
+                        <i class="fa-solid fa-file-invoice mr-3"></i>
+                        <span>Avoirs</span>
+                    </a>
+
+                    <a href="./facture-transport.html" class="sidebar-link" data-page="facture-transport">
+                        <i class="fa-solid fa-truck-fast mr-3"></i>
+                        <span>Facture Transport</span>
+                    </a>
+
+                    <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
+                        Point de Vente
+                    </div>
+
+                    <a href="./caisse-ouverture.html" class="sidebar-link" data-page="caisse-ouverture">
+                        <i class="fa-solid fa-door-open mr-3"></i>
+                        <span>Ouverture Caisse</span>
+                    </a>
+
+                    <a href="./caisse.html" class="sidebar-link" data-page="caisse">
                         <i class="fa-solid fa-cash-register mr-3"></i>
-                        Caisse / POS
+                        <span>Interface Caisse</span>
+                    </a>
+
+                    <a href="./caisse-cloture.html" class="sidebar-link" data-page="caisse-cloture">
+                        <i class="fa-solid fa-door-closed mr-3"></i>
+                        <span>Clôture Caisse</span>
+                    </a>
+
+                    <a href="./caisse-historique.html" class="sidebar-link" data-page="caisse-historique">
+                        <i class="fa-solid fa-history mr-3"></i>
+                        <span>Historique Sessions</span>
+                    </a>
+
+                    <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
+                        Service Client
+                    </div>
+
+                    <a href="./retours-list.html" class="sidebar-link" data-page="retours-list">
+                        <i class="fa-solid fa-rotate-left mr-3"></i>
+                        <span>Retours</span>
+                    </a>
+
+                    <a href="./reclamations-list.html" class="sidebar-link" data-page="reclamations-list">
+                        <i class="fa-solid fa-headset mr-3"></i>
+                        <span>Réclamations</span>
+                        <span class="ml-2 bg-[#EF4444] text-white text-xs px-2 py-0.5 rounded-full">5</span>
+                    </a>
+
+                    <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
+                        Reporting
+                    </div>
+
+                    <a href="./commissions-dashboard.html" class="sidebar-link" data-page="commissions-dashboard">
+                        <i class="fa-solid fa-coins mr-3"></i>
+                        <span>Mes Commissions</span>
                     </a>
 
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-6 mb-2">
                         Système
                     </div>
 
-                    <a href="../index.html" class="block px-4 py-2 text-[14px] hover:bg-[#152045] transition-colors">
+                    <a href="../index.html" class="sidebar-link" data-page="home">
                         <i class="fa-solid fa-home mr-3"></i>
-                        Accueil
+                        <span>Accueil</span>
                     </a>
                 </nav>
             </aside>
 
             <!-- Main Content Area -->
             <div class="flex-1 overflow-auto bg-[#F8F9FA]">
-                <div style="max-width: 1200px; margin: 0 auto;">
-
-                    <!-- Breadcrumb -->
-                    <div style="padding: 24px 24px 0;">
-                        <nav style="display: flex; align-items: center; gap: 8px; font-size: 14px; color: #6B7280; margin-bottom: 20px;">
-                            <a href="./commandes-list.html" style="color: #263c89; text-decoration: none;">
-                                <i class="fa-solid fa-file-invoice"></i> Commandes
-                            </a>
-                            <i class="fa-solid fa-chevron-right" style="font-size: 12px;"></i>
-                            <span>Nouvelle commande</span>
-                        </nav>
-                    </div>
-
-                    <div style="padding: 0 24px 24px;">
+                <div class="ventes-container" style="max-width: 1200px; margin: 0 auto;">
                         <form id="order-form">
 
                             <!-- TABS NAVIGATION -->
@@ -1480,13 +1561,13 @@
                         </div>
 
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Scripts -->
+    <script src="./js/sidebar.js"></script>
     <script src="./js/commande-create.js"></script>
 </body>
 </html>
